--- a/index.html
+++ b/index.html
@@ -25,19 +25,17 @@
 							<h1>BrightBite Dental Spa</h1>
 							<p class="major">Brightening Smiles, One Tooth at a Time</p>
 							<ul class="actions stacked">
-								<li><a href="#services" class="button big wide smooth-scroll-middle">Services</a></li>
-								<li><a href="#photos" class="button big wide smooth-scroll-middle">Photos</a></li>
+								<li><a href="#services" class="button big wide smooth-scroll-middle">Our Services</a></li>
+								<li><a href="#book" class="button big wide smooth-scroll-middle">Book Now</a></li>
+								<li><a href="#contact" class="button big wide smooth-scroll-middle">Contact Us</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="bg3.jpg" alt="" />
+							<img src="bg5.jpg" alt="" />
 						</div>
 					</section>
 
 				<!-- Two -->
-					<br><br><br><br>
-					<center><h1>Services</h1></center>
-					<br><br>
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="services">
 						<div class="content">
 							<h2>Preventive Care</h2>
@@ -74,9 +72,10 @@
 
 
 				<!-- Seven -->
-					<section class="wrapper style1 align-center">
+					<section class="wrapper style1 align-center" id="book">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Book Now!</h2>
+							<!--
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field half">
@@ -96,15 +95,29 @@
 									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
 								</ul>
 							</form>
+							-->
+							<iframe width="100%" height="520px" src="https://bookit.dentrixascend.com/soe/new/dental?pid=ASC6000000001231&amp;mode=externalLink"></iframe>
+							<a href="https://bookit.dentrixascend.com/soe/new/dental?pid=ASC6000000001231&amp;mode=externalLink" target="_blank">Click here to book an appointment in a new tab</a>
+
 
 						</div>
 					</section>
 
 				<!-- Footer -->
-					<footer class="wrapper style1 align-center">
+					<footer class="wrapper style1 align-center" id="contact">
 						<div class="inner">
+							<h2>Contact Our Office</h2>
+							
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6056.0230464349725!2d-74.02591522390188!3d40.629627842654315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24556f0846b77%3A0xdd8bbc2d5e119573!2sBrightBite%20Dental%20Spa!5e0!3m2!1sen!2sus!4v1721266802945!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+							<br><br>
+							<p><a target="_blank" href="https://maps.app.goo.gl/CH6jH5Jq7Y51H8oz6">472 Bay Ridge Pkwy First Floor, Brooklyn, NY 11209</a>
+							<br>
+							<a target="_blank" href="tel:+16072912115">+1 607 291-2115</a>
+							<br>
+							<a href="mailto:smile@brightbitedentalspa.com">smile@brightbitedentalspa.com</a></p>
+
 							<ul class="icons">
-								<li><a href="#" class="icon phone fa-phone"><span class="label">Phone</span></a></li>
 								<li><a href="https://www.instagram.com/brightbitedentalspa/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="mailto:smile@brightbitedentalspa.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
