--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<head>
 		<title>BrightBite Dental Spa</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="BrightBite Dental Spa offers a luxurious and relaxing dental experience with top-quality care in a spa-like environment. Our services include cosmetic dentistry, teeth whitening, dental implants, and routine dental check-ups.">
+		<meta name="keywords" content="dental spa, cosmetic dentistry, teeth whitening, dental implants, routine check-ups, luxurious dental care, spa-like dental experience, top-quality dental services, BrightBite Dental Spa">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -20,11 +22,12 @@
 
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 color8 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>BrightBite Dental Spa</h1>
 							<p class="major">Brightening Smiles, One Tooth at a Time</p>
 							<ul class="actions stacked">
+								<li><a href="#about" class="button big wide smooth-scroll-middle">About Us</a></li>
 								<li><a href="#services" class="button big wide smooth-scroll-middle">Our Services</a></li>
 								<li><a href="#book" class="button big wide smooth-scroll-middle">Book Now</a></li>
 								<li><a href="#contact" class="button big wide smooth-scroll-middle">Contact Us</a></li>
