--- a/index.html
+++ b/index.html
@@ -39,7 +39,20 @@
 					</section>
 
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="services">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="about">
+						<div class="content">
+							<h2>About Us</h2>
+							<p>Dr. Mozna Mussa is a dedicated and compassionate dentist committed to providing exceptional dental care in a serene and comfortable environment. With a Doctor of Dental Surgery (DDS) degree and extensive experience in both general and cosmetic dentistry, Dr. Mussa combines her expertise with a gentle touch to ensure each patient feels at ease.
+
+At BrightBite Dental Spa, Dr. Mussa focuses on creating personalized treatment plans tailored to each patient's unique needs and goals. She is passionate about continuing education and staying current with the latest advancements in dental technology and techniques to deliver the best possible outcomes.</p>
+						</div>
+						<div class="image">
+							<img src="222.webp" alt="" />
+						</div>
+					</section>
+
+				<!-- Two -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="services">
 						<div class="content">
 							<h2>Preventive Care</h2>
 							<p>Our preventive care services focus on maintaining optimal oral health and preventing dental issues before they arise. We offer thorough cleanings to remove plaque and tartar, ensuring your teeth and gums stay healthy. Additionally, our oral cancer screenings provide an essential early detection measure, helping to safeguard your overall well-being.</p>
@@ -50,7 +63,7 @@
 					</section>
 
 				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Cosmetic Dentistry</h2>
 							<p>Enhance the appearance of your smile with our comprehensive cosmetic dentistry services. Whether you're looking to brighten your smile with bleaching, achieve a flawless look with veneers, or explore other cosmetic dentistry options, we are dedicated to helping you achieve the radiant, confident smile you deserve.</p>
@@ -61,7 +74,7 @@
 					</section>
 
 				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Restorative Dentistry</h2>
 							<p>Our restorative dentistry services are designed to repair and restore damaged or missing teeth, bringing back both functionality and aesthetics. We provide fillings, crowns, and bridges to address various dental issues, while our implants offer a permanent solution for missing teeth. Additionally, we offer root canal treatments to save infected teeth and extractions when necessary to maintain your overall oral health.</p>
@@ -71,6 +84,16 @@
 						</div>
 					</section>
 
+				<!-- Four -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Pediatric Dentistry</h2>
+							<p>At BrightBite Dental Spa, we understand that a child's early dental experiences can shape their attitude towards oral health for a lifetime. Our Pediatric Dentistry services are designed to create a positive and enjoyable dental experience for children of all ages. Dr. Mozna Mussa and our dedicated team are committed to providing gentle and compassionate care in a friendly, welcoming environment.</p>
+						</div>
+						<div class="image">
+							<img src="ddd.webp" alt="" />
+						</div>
+					</section>
 
 
 
