--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 				<!-- One -->
-					<section class="banner style1 color8 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 color8 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right" id="top">
 						<div class="content">
 							<h1>BrightBite Dental Spa</h1>
 							<p class="major">Brightening Smiles, One Tooth at a Time</p>
@@ -148,6 +148,22 @@ At BrightBite Dental Spa, Dr. Mussa focuses on creating personalized treatment p
 								<li><a href="mailto:smile@brightbitedentalspa.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; BrightBite Dental Spa 2024</p>
+<ul class="actions stacked" id="return-to-top">
+    <li><a href="#top" class="button big wide smooth-scroll-middle">TOP OF PAGE</a></li>
+</ul>
+<style>
+#return-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000; /* Ensure it appears above other content */
+}
+
+#return-to-top .button {
+	background-color: white; /* Darker button color on hover */
+}
+
+</style>
 						</div>
 					</footer>
 
