--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ At BrightBite Dental Spa, Dr. Mussa focuses on creating personalized treatment p
 						<div class="inner">
 							<h2>Contact Our Office</h2>
 							
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6056.0230464349725!2d-74.02591522390188!3d40.629627842654315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24556f0846b77%3A0xdd8bbc2d5e119573!2sBrightBite%20Dental%20Spa!5e0!3m2!1sen!2sus!4v1721266802945!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6056.0230464349725!2d-74.02591522390188!3d40.629627842654315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24556f0846b77%3A0xdd8bbc2d5e119573!2sBrightBite%20Dental%20Spa!5e0!3m2!1sen!2sus!4v1721266802945!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 							<br><br>
 							<p><a target="_blank" href="https://maps.app.goo.gl/CH6jH5Jq7Y51H8oz6">472 Bay Ridge Pkwy First Floor, Brooklyn, NY 11209</a>
@@ -149,7 +149,7 @@ At BrightBite Dental Spa, Dr. Mussa focuses on creating personalized treatment p
 							</ul>
 							<p>&copy; BrightBite Dental Spa 2024</p>
 <ul class="actions stacked" id="return-to-top">
-    <li><a href="#top" class="button big wide smooth-scroll-middle">TOP OF PAGE</a></li>
+    <li><a href="#top" class="button big wide smooth-scroll-middle">↑ TOP OF PAGE</a></li>
 </ul>
 <style>
 #return-to-top {
