--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ At BrightBite Dental Spa, Dr. Mussa focuses on creating personalized treatment p
 								<li><a href="mailto:smile@brightbitedentalspa.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; BrightBite Dental Spa 2024</p>
-<ul class="actions stacked" id="return-to-top">
+<ul class="actions stacked" id="return-to-top" style="display: none;">
     <li><a href="#top" class="button big wide smooth-scroll-middle">↑ TOP OF PAGE</a></li>
 </ul>
 <style>
