--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pediatric Dentistry</h2>
-							<p>At BrightBite Dental Spa, we understand that a child's early dental experiences can shape their attitude towards oral health for a lifetime. Our Pediatric Dentistry services are designed to create a positive and enjoyable dental experience for children of all ages. Dr. Mozna Mussa and our dedicated team are committed to providing gentle and compassionate care in a friendly, welcoming environment.</p>
+							<h2>Dentistry For Kids</h2>
+							<p>At BrightBite Dental Spa, we understand that a child's early dental experiences can shape their attitude towards oral health for a lifetime. Our dentistry services are designed to create a positive and enjoyable dental experience for children of all ages. Dr. Mozna Mussa and our dedicated team are committed to providing gentle and compassionate care in a friendly, welcoming environment.</p>
 						</div>
 						<div class="image">
 							<img src="ddd.webp" alt="" />
