--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<p>At BrightBite Dental Spa, we understand that a child's early dental experiences can shape their attitude towards oral health for a lifetime. Our  services are designed to create a positive and enjoyable dental experience for children of all ages. Dr. Mozna Mussa and our dedicated team are committed to providing gentle and compassionate care in a friendly, welcoming environment.</p>
 						</div>
 						<div class="image">
-							<img src="ddd.webp" alt="" />
+							<img src="4.webp" alt="" />
 						</div>
 					</section>
 
