--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							<p>Our preventive care services focus on maintaining optimal oral health and preventing dental issues before they arise. We offer thorough cleanings to remove plaque and tartar, ensuring your teeth and gums stay healthy. Additionally, our oral cancer screenings provide an essential early detection measure, helping to safeguard your overall well-being.</p>
 						</div>
 						<div class="image">
-							<img src="1.webp" alt="" />
+							<img src="1.jpeg" alt="" />
 						</div>
 					</section>
 
@@ -67,7 +67,7 @@
 							<p>Enhance the appearance of your smile with our comprehensive cosmetic dentistry services. Whether you're looking to brighten your smile with bleaching, achieve a flawless look with veneers, or explore other cosmetic dentistry options, we are dedicated to helping you achieve the radiant, confident smile you deserve.</p>
 						</div>
 						<div class="image">
-							<img src="2.webp" alt="" />
+							<img src="2.jpeg" alt="" />
 						</div>
 					</section>
 
@@ -75,10 +75,10 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Restorative Dentistry</h2>
-							<p>Our restorative dentistry services are designed to repair and restore damaged or missing teeth, bringing back both functionality and aesthetics. We provide fillings, crowns, and bridges to address various dental issues, while our implants offer a permanent solution for missing teeth. Additionally, we offer root canal treatments to save infected teeth and extractions when necessary to maintain your overall oral health.</p>
+							<p>Our restorative dentistry services are designed to repair and restore damaged or missing teeth, bringing back both functionality and aesthetics. Among those services are fillings, crowns, bridges, dentures, and invisalign, which address various dental issues, while our implants offer a permanent solution for missing teeth. Additionally, we offer root canal treatments to save infected teeth and extractions when necessary to maintain your overall oral health.</p>
 						</div>
 						<div class="image">
-							<img src="3.webp" alt="" />
+							<img src="3.jpeg" alt="" />
 						</div>
 					</section>
 
@@ -89,7 +89,7 @@
 							<p>At BrightBite Dental Spa, we understand that a child's early dental experiences can shape their attitude towards oral health for a lifetime. Our  services are designed to create a positive and enjoyable dental experience for children of all ages. Dr. Mozna Mussa and our dedicated team are committed to providing gentle and compassionate care in a friendly, welcoming environment.</p>
 						</div>
 						<div class="image">
-							<img src="4.webp" alt="" />
+							<img src="4.jpeg" alt="" />
 						</div>
 					</section>
 
