--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="bg5.jpg" alt="" />
+							<img src="bg444.png" alt="" />
 						</div>
 					</section>
 
