--- a/index.html
+++ b/index.html
@@ -139,6 +139,80 @@
 					</section>
 
 
+				<!-- Gallery -->
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2>Insurances we accept</h2>
+							<p>We may accept other insurances not mentioned on this list, please contact us to confirm.</p>
+						</div>
+
+						<!-- Gallery -->
+							<div class="gallery style1 small onscroll-fade-in">
+								<article>
+									<img style="width:60%" src="images/gallery/aetna.jpeg" alt="AETNA" />
+									<div class="caption">
+										<h3>AETNA</h3>
+									</div>
+								</article>
+								<article>
+									<img style="width:90%" src="images/gallery/emblem.png" alt="EMBLEM HEALTH" />
+									<div class="caption">
+										<h3>EMBLEM HEALTH</h3>
+									</div>
+								</article>
+								<article>
+									<img style="width:70%" src="images/gallery/g.png" alt="GUARDIAN" />
+									<div class="caption">
+										<h3>GUARDIAN</h3>
+									</div>
+								</article>
+								<article>
+									<img style="width:90%" src="images/gallery/metlife.jpg" alt="METLIFE" />
+									<div class="caption">
+										<h3>METLIFE</h3>
+									</div>
+								</article>
+								<article>
+									<img style="width:90%" src="images/gallery/delta.png" alt="DELTA DENTAL" />
+									<div class="caption">
+										<h3>DELTA DENTAL</h3>
+									</div>
+								</article>
+								<article>
+									<img style="width:70%" src="images/gallery/uh.png" alt="UNITED HEALTHCARE" />
+									<div class="caption">
+										<h3>UNITED HEALTHCARE</h3>
+									</div>
+								</article>
+								<article>
+									<img style="width:80%" src="images/gallery/humana.jpg" alt="HUMANA" />
+									<div class="caption">
+										<h3>HUMANA</h3>
+									</div>
+								</article>
+								<article>
+									<img style="width:80%" src="images/gallery/liberty.jpg" alt="LIBERTY DENTAL" />
+									<div class="caption">
+										<h3>LIBERTY DENTAL</h3>
+									</div>
+								</article>
+								<article>
+									<img style="width:60%" src="images/gallery/geha.png" alt="GEHA" />
+									<div class="caption">
+										<h3>GEHA</h3>
+									</div>
+								</article>
+								<article>
+									<img style="width:70%" src="images/gallery/anthem.jpg" alt="ANTHEM MEDICAID" />
+									<div class="caption">
+										<h3>ANTHEM MEDICAID</h3>
+									</div>
+								</article>
+							</div>
+
+					</section>
+
+
 
 				<!-- Seven -->
 					<section class="wrapper style1 align-center" id="book">
