--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<center>
 					<ul class="actions stacked">
 						<br>
-						<li><a onclick="alert('Please email emergency@brightbitedentalspa.com and call the office at +1 607 291-2115 to verify appointment.');" class="button primary">Emergency?</a></li>
+						<li><a onclick="alert('Please email emergency@brightbitedentalspa.com and call the office at +1 607 291-2115 to verify appointment.');" class="button primary">Emergency?</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#book" class="button big wide smooth-scroll-middle">Book Now</a></li>
 					</ul>
 				</center>
 
@@ -74,6 +74,7 @@
 							<ul class="actions stacked">
 								<li><a href="#about" class="button big wide smooth-scroll-middle">About Us</a></li>
 								<li><a href="#services" class="button big wide smooth-scroll-middle">Our Services</a></li>
+								<li><a href="#insurances" class="button big wide smooth-scroll-middle">Insurances</a></li>
 								<li><a href="#book" class="button big wide smooth-scroll-middle">Book Now</a></li>
 								<li><a href="#contact" class="button big wide smooth-scroll-middle">Contact Us</a></li>
 							</ul>
@@ -140,13 +141,11 @@
 
 
 				<!-- Gallery -->
-					<section class="wrapper style1 align-center">
+					<section class="wrapper style1 align-center" id="insurances">
 						<div class="inner">
-							<h2>Insurances we accept</h2>
-							<p>We may accept other insurances not mentioned on this list, please contact us to confirm.</p>
-						</div>
-
-						<!-- Gallery -->
+							<h2>Accepted Insurances</h2>
+							<p>We may accept other insurances not mentioned on this list. Please chat with us below to inquire about your specific insurance plan or contact us.</p>
+							<!-- Gallery -->
 							<div class="gallery style1 small onscroll-fade-in">
 								<article>
 									<img style="width:60%" src="images/gallery/aetna.jpeg" alt="AETNA" />
@@ -209,6 +208,7 @@
 									</div>
 								</article>
 							</div>
+						</div>
 
 					</section>
 
